# MimicWindowsServer

./: BUILDING.md  CMakeLists.txt  CMakePresets.json  Dockerfile  HACKING.md  README.md  docker-compose.yml  vcpkg.json
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
source/: elastic_client.cpp  elastic_client.h  lib.cpp  server.cpp  tracer_common.h
test/: CMakeLists.txt
test/source/: MimicWindowsServer_test.cpp
